site has been pushed live to site. Login and database access working. Next up page for Arduino to talk to

--- a/HeatingControl/assets/mobirise/css/mbr-additional.css
+++ b/HeatingControl/assets/mobirise/css/mbr-additional.css
@@ -717,3 +717,13 @@ a {
 .cid-skv3Emqbko .mbr-section-title {
   color: #ffffff;
 }
+.cid-skB9uQlrN8 {
+  background-image: url("../../../assets/images/background6.jpg");
+}
+.cid-skB9uQlrN8 .mbr-section-title {
+  color: #000000;
+}
+.cid-skB9uQlrN8 .mbr-text,
+.cid-skB9uQlrN8 .mbr-section-btn {
+  color: #000000;
+}
